started documentation with swagger

--- a/satisfy international store/Pipfile
+++ b/satisfy international store/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 djangorestframework = "*"
 psycopg2-binary = "*"
 djangorestframework-simplejwt = "*"
+drf-spectacular = {extras = ["sidecar"], version = "*"}
 
 [dev-packages]
 
